--- a/Projeto-turismo/paginas/index.html
+++ b/Projeto-turismo/paginas/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alice&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
@@ -10,42 +13,50 @@
 
     <div id="local">
         <main>
-            <section class="conheca">
-                <p id="legenda">sua próxima viagem:</p>
+            <section id="conheca">
+                <p class="legenda">sua próxima viagem:</p>
                 <h1>Conheça Busan</h1>
                 <figure>
                     <img src="../imagens/image.jpg" alt="busan">
-                    <figcaption>Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.</figcaption>
+                    <figcaption class="centralizar">Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui,<br> 
+                        exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.</figcaption>
                 </figure>
             </section>
             <section id="descubra">
-                <p class="legenda">para os amantes de história</p>
-                <h2>Descubra 3 destinos imperdíveis em Busan</h2>
-                <p>As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos.
-                Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.</p>
+                <div id="titulo">
+                    <p class="legenda">para os amantes de história</p>
+                    <h2>Descubra 3 destinos imperdíveis em Busan</h2>
+                    <p>As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos.
+                    Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá encantar os fotógrafos.</p>
+                </div>
                 <img src="../imagens/image (1).jpg" alt="">
                 <ol>
-                    <li>Templo Haedong Younggungsa</li>
+                    <li class="grande"><h3>Templo Haedong Younggungsa</h3></li>
                     <p>O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. </p>
+                    <br>
                     <p class="negrito">Bom para:</p>
                     <ul>
-                        <li>História</li>
+                        <li class="azul">História</li>
                     </ul>
                     <img src="../imagens/image (2).jpg" alt="">
-                    <li>Templo Beomeo-sa</li>
+
+                    <li class="grande"><h3>Templo Beomeo-sa</h3></li>
                     <p>O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon.</p>
+                    <br>
                     <p class="negrito">Bom para:</p>
                     <ul>
-                        <li>História</li>
+                        <li class="azul">História</li>
                     </ul>
                     <img src="../imagens/image (3).jpg" alt="">
-                    <li>Parque Yongdusan</li>
+                    
+                    <li class="grande"><h3>Parque Yongdusan</h3></li>
                     <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats.</p>
+                    <br>
                     <p class="negrito">Bom para:</p>
                     <ul>
-                        <li>Casis</li>
-                        <li>Famílias</li>
-                        <li>Orçamento</li>
+                        <li style="color: #591B98;">Casais</li>
+                        <li style="color: #E5245E;">Famílias</li>
+                        <li style="color: #E95E10;">Orçamento</li>
                     </ul>
                 </ol>
             </section>
